--- a/src/nereus/ui/Bundle.properties
+++ b/src/nereus/ui/Bundle.properties
@@ -1,4 +1,4 @@
-UserInterface.title=miracle
+UserInterface.title=Nereus
 UserInterface.btnShutdown.text=Shutdown
 UserInterface.btnClear.text=Clear Data
 UserInterface.btnRestart.text=Restart
@@ -7,12 +7,12 @@ UserInterface.jLabel44.text=Factions:
 UserInterface.aurasCount.text=0
 UserInterface.hairshopsCount.text=0
 UserInterface.monstersCount.text=0
-UserInterface.refinementsCount.text=0
+UserInterface.enhancementsCount.text=0
 UserInterface.questsCount.text=0
 UserInterface.jLabel29.text=Auras:
 UserInterface.jLabel28.text=Hairshops:
 UserInterface.jLabel26.text=Monsters:
-UserInterface.jLabel25.text=Refinements:
+UserInterface.jLabel25.text=Enhancements:
 UserInterface.jLabel24.text=Quests:
 UserInterface.shopsCount.text=0
 UserInterface.hairsCount.text=0
@@ -44,7 +44,9 @@ UserInterface.dataIn.text=0
 UserInterface.jLabel19.text=Data In:
 UserInterface.jLabel32.text=Database
 UserInterface.dbConnections.text=0
+UserInterface.idleConnections.text=0
 UserInterface.jLabel18.text=Active Connections:
+UserInterface.jLabel30.text=Idle Connections:
 UserInterface.partyCount.text=0
 UserInterface.jLabel27.text=Party Count:
 UserInterface.jLabel17.text=Server
@@ -66,5 +68,5 @@ UserInterface.chkAuto.text=Auto Refresh
 UserInterface.btnRefresh.text=Refresh
 UserInterface.panelStatus.TabConstraints.tabTitle=Status
 UserInterface.btnAbout.text=About
-UserInterface.serverRates.text=Server Rates: 1x EXP, 1x Gold, 1x Rep, 1x CP
+UserInterface.serverRates.text=Server Rates: 1x EXP, 1x Gold, 1x Coins, 1x Rep, 1x CP
 UserInterface.btnReload.text=Reload Requests
