implement Worldboss, Item passive

--- a/src/nereus/ui/Bundle.properties
+++ b/src/nereus/ui/Bundle.properties
@@ -1,4 +1,4 @@
-UserInterface.title=Nereus
+UserInterface.title=Yacore
 UserInterface.btnShutdown.text=Shutdown
 UserInterface.btnClear.text=Clear Data
 UserInterface.btnRestart.text=Restart
@@ -44,9 +44,7 @@ UserInterface.dataIn.text=0
 UserInterface.jLabel19.text=Data In:
 UserInterface.jLabel32.text=Database
 UserInterface.dbConnections.text=0
-UserInterface.idleConnections.text=0
 UserInterface.jLabel18.text=Active Connections:
-UserInterface.jLabel30.text=Idle Connections:
 UserInterface.partyCount.text=0
 UserInterface.jLabel27.text=Party Count:
 UserInterface.jLabel17.text=Server
@@ -68,5 +66,5 @@ UserInterface.chkAuto.text=Auto Refresh
 UserInterface.btnRefresh.text=Refresh
 UserInterface.panelStatus.TabConstraints.tabTitle=Status
 UserInterface.btnAbout.text=About
-UserInterface.serverRates.text=Server Rates: 1x EXP, 1x Gold, 1x Coins, 1x Rep, 1x CP
+UserInterface.serverRates.text=Server Rates: 1x EXP, 1x Gold, 1x Rep, 1x CP
 UserInterface.btnReload.text=Reload Requests
